# eval-setup-scripts

./: .gitignore  README.md  env.sh  leonardo_env.sh  pyproject.toml  setup.sh
examples/: all.txt  datasets.txt  models.txt
slurm/: build_container.sh  eval_single.sbatch  interactive_container.sh  run_in_container.sh  test_container.sh
src/cluster_utils/: __init__.py  cluster.py  clusters.toml  hf_cache_manager.py
